--- a/app/views/backend/admin/events/edit.js.erb
+++ b/app/views/backend/admin/events/edit.js.erb
@@ -1,3 +1,3 @@
-$('#remote_container').html('<%= j render "form" %>');
-$('#edit_event').modal('show');
+$('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>');
+$('#edit_event').modal('toggle');
 
