--- a/app/views/backend/shared/_javascripts.html.haml
+++ b/app/views/backend/shared/_javascripts.html.haml
@@ -1,5 +1,5 @@
 = javascript_include_tag 'backend'
-= javascript_include_tag 'admin_full_calender'
+= javascript_include_tag current_user.admin? ? 'admin_full_calender' : 'employee_full_calender'
 = render 'backend/shared/flashes'
 = yield :javascripts
 
