--- a/app/views/backend/admin/events/_form.html.haml
+++ b/app/views/backend/admin/events/_form.html.haml
@@ -83,7 +83,7 @@
                         = f.input :end, value: Date.today, class: 'form-control input-sm end_hidden'
                   .form-actions.default-padding.pull-right
                     = f.submit "Submit" , class: 'btn btn-success'
-                    -#= link_to 'Delete', @event, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure?' }, remote: true unless @event.new_record?
+                    = link_to 'Delete', admin_event_path(@event) , method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure?' }, remote: true unless @event.new_record?
               #recurrence.tab-pane
                 %strong Recurrence
               #cost-item.tab-pane
