--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -24,3 +24,64 @@
 .fc-list-heading > .fc-widget-header {
   padding: 6px 15px 6px 15px;
 }
+
+
+.fc-popover.click .fc-header {
+  position: relative;
+  padding-right: 30px;
+}
+.fc-popover .fc-header, .fc-unthemed .fc-popover .fc-header {
+  -webkit-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  color: #fff;
+  background: #00a8ff;
+  padding: 6px 10px 6px 12px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: .875rem;
+}
+fc-popover, .fc-unthemed .fc-popover {
+  width: 250px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  background: 0 0;
+  border: none;
+}
+.fc-popover {
+  position: absolute;
+  box-shadow: 0 2px 6px rgba(0,0,0,.15);
+}
+.fc-popover .fc-header {
+  padding: 2px 4px;
+}
+.fc-popover.click .fc-header .cl {
+  border: none;
+  background: 0 0;
+  padding: 0;
+  color: #fff;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-top: -7px;
+}
+.fc-popover.click .fc-body {
+  padding: 12px;
+}
+.fc-popover .fc-body, .fc-unthemed .fc-popover .fc-body {
+  background: #fbfcfd;
+  border: 1px solid #c5d6de;
+  border-top: none;
+  -webkit-border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
+}
+.fc-popover.click .fc-body p {
+  margin: 0 0 1em;
+}
+
+.color-blue-grey {
+  color: #6c7a86!important;
+}
+.fc-popover.click .fc-body .actions {
+  margin: 0 -12px 0 0;
+  zoom: 1;
+}
