change in index.json builder

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -94,7 +94,7 @@ fc-popover, .fc-unthemed .fc-popover {
 
 .fc-event-action-remove{
   font-size: 13px;
-  font-family: "Comic Sans MS";
+  font-family: "Times New Roman";
 
 }
 
