--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -10,6 +10,7 @@
 *= require neon-theme
 *= require jquery-jvectormap-1.2.2
 *= require rickshaw
+*= require fullcalendar
 *= require fullcalendar-2/fullcalendar.min
 *= require daterangepicker
 *= require bootstrap-datetimepicker
