--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -102,12 +102,7 @@
           -#      =f.text_field :postcode , class: 'form-control' , placeholder: 'Enter postcode' , data: {"validate": "required"}
           .form-actions.default-padding.pull-right
             = f.submit "Submit" , class: 'btn btn-success'
-            = link_to 'Delete',
-              event,
-              method: :delete,
-              class: 'btn btn-danger',
-              data: { confirm: 'Are you sure?' },
-              remote: true unless @event.new_record?
+            = link_to 'Delete', event,method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure?' }, remote: true unless @event.new_record?
       #recurrence.tab-pane
         %strong Recurrence
       #cost-item.tab-pane
