change in the UI design

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -106,5 +106,14 @@ fc-popover, .fc-unthemed .fc-popover {
   padding: 10px;
 }
 .img-round{
-  border-radius: 39px;
+  border-radius: 50px;
+}
+.padding-top {
+padding-top: 35px!important;
+  color: black;
+}
+
+.font-color{
+  color: black;
+
 }
